<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Verify">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/AquaDanon"
        android:paddingTop="100dp">

        <TextView
            android:id="@+id/ver_tv_acc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ver1"
            android:gravity="center"
            android:textColor="@color/lycheewhite"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/TvTextVerifyAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ver2"
            android:gravity="center"
            android:textColor="@color/lycheewhite"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/ver_tv_acc" />

        <EditText
            android:id="@+id/input_ver_acc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ver3"
            android:gravity="center"
            android:textColorHint="@color/lycheewhite"
            android:backgroundTint="@color/lycheewhite"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@+id/TvTextVerifyAccount" />

        <Button
            android:id="@+id/btnsend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="send"
            android:textColor="@color/lycheewhite"
            android:background="@drawable/buttonborder"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/input_ver_acc" />

        <TextView
            android:id="@+id/ver_tv_doesnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ver4"
            android:textColor="@color/whitepensive"
            android:layout_marginTop="15dp"
            android:layout_marginStart="100dp"
            android:layout_below="@+id/btnsend" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ver5"
            android:textColor="@color/lycheewhite"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:layout_toRightOf="@+id/ver_tv_doesnt"
            android:layout_below="@+id/btnsend" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>